Додано переклад LimboAuth

--- a/LimboAuth/config.yml
+++ b/LimboAuth/config.yml
@@ -6,7 +6,7 @@ version: "1.1.13"
 # GSON - "[{"text":"Example","bold":true,"color":"red"},{"text":" ","bold":true},{"text":"Text","bold":true,"color":"blue"}]". (https://minecraft.tools/en/json_text.php/)
 # GSON_COLOR_DOWNSAMPLING - Same as GSON, but uses downsampling.
 serializer: LEGACY_AMPERSAND
-prefix: "&9&lLimboAuth &7»&f"
+prefix: "LimboAuth &6>>&f"
 
 # Don't use \n, use {NL} for new line, and {PRFX} for prefix.
 main:
